<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/img"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:textColor="@color/white"
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="140dp"
        />
    <TextView
        android:id="@+id/txt_touch"
        android:textColor="@color/orange"
        app:layout_constraintTop_toTopOf="@id/txt_password"
        app:layout_constraintStart_toEndOf="@id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch"
        android:layout_marginStart="10dp"
        />
    <com.google.android.material.button.MaterialButton
        android:text="@string/come"
        android:id="@+id/button"
        android:backgroundTint="@color/gray"
        android:layout_marginBottom="10dp"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/txt_password"
        />
    <EditText
        android:hint="@string/text2"
        android:id="@+id/edit_password"
        android:layout_marginBottom="10dp"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button"
        android:autofillHints="postalCode"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_text2"
        android:hint="@string/text1"
        android:layout_marginBottom="10dp"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/edit_password"
        android:autofillHints="postalCode"
        android:inputType="text" />

    <TextView
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txt_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration1"
        app:layout_constraintBottom_toTopOf="@id/edit_text2"
        android:layout_margin="60dp"

        />
    <TextView
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txt_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome1"
        app:layout_constraintBottom_toTopOf="@id/txt_password1"
        android:layout_margin="10dp"

        />
    <TextView
        android:visibility="gone"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txt_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"

        />
    <TextView
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txt_password3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_in"
        app:layout_constraintBottom_toTopOf="@id/txt_password2"
        android:layout_margin="120dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>